--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "jest": "jest --watch"
+    "mocha": "mocha",
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
