--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "mocha": "mocha",
     "test": "jest --watch"
   },
   "keywords": [],
@@ -12,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.4",
-    "jest": "^27.5.1",
-    "mocha": "^9.1.1"
+    "jest": "^27.5.1"
   }
 }
